# some-tips

./: CMakeLists.txt  README.md
cpp/: try_catch.cpp
epoll_test/: CMakeLists.txt
epoll_test/src/: epoll_cli.c  epoll_ser.c  write2fd.c
getJulianDay/: getJulianDay.c
graph/: graph.c
macro/: macro.c
nginx_simulator/: CMakeLists.txt
nginx_simulator/src/: main.c  master_fork.c  master_fork.h  sockerpair.c  worker.c
src/: main.c  master_fork.c  master_fork.h  master_worker.c
sscanf/: getnumInstr.cpp  matchcurves.c  num2str.cpp  sscanf.c  sscanf_test.c  str_hex2decimal.cpp  test.c
